; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/siba/extr_siba_bhndb.c_siba_bhndb_suspend_child.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/siba/extr_siba_bhndb.c_siba_bhndb_suspend_child.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.siba_devinfo = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64)* @siba_bhndb_suspend_child to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @siba_bhndb_suspend_child(i64 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.siba_devinfo*, align 8
  %7 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load i64, i64* %5, align 8
  %9 = call i64 @device_get_parent(i64 %8)
  %10 = load i64, i64* %4, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %17

12:                                               ; preds = %2
  %13 = load i64, i64* %4, align 8
  %14 = call i64 @device_get_parent(i64 %13)
  %15 = load i64, i64* %5, align 8
  %16 = call i32 @BUS_SUSPEND_CHILD(i64 %14, i64 %15)
  br label %17

17:                                               ; preds = %12, %2
  %18 = load i64, i64* %5, align 8
  %19 = call %struct.siba_devinfo* @device_get_ivars(i64 %18)
  store %struct.siba_devinfo* %19, %struct.siba_devinfo** %6, align 8
  %20 = load i64, i64* %4, align 8
  %21 = load i64, i64* %5, align 8
  %22 = call i32 @bhnd_generic_br_suspend_child(i64 %20, i64 %21)
  store i32 %22, i32* %7, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %17
  %25 = load i32, i32* %7, align 4
  store i32 %25, i32* %3, align 4
  br label %30

26:                                               ; preds = %17
  %27 = load i64, i64* %4, align 8
  %28 = load %struct.siba_devinfo*, %struct.siba_devinfo** %6, align 8
  %29 = call i32 @siba_bhndb_suspend_cfgblocks(i64 %27, %struct.siba_devinfo* %28)
  store i32 0, i32* %3, align 4
  br label %30

30:                                               ; preds = %26, %24
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i64 @device_get_parent(i64) #1

declare dso_local i32 @BUS_SUSPEND_CHILD(i64, i64) #1

declare dso_local %struct.siba_devinfo* @device_get_ivars(i64) #1

declare dso_local i32 @bhnd_generic_br_suspend_child(i64, i64) #1

declare dso_local i32 @siba_bhndb_suspend_cfgblocks(i64, %struct.siba_devinfo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
